--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,9 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+         maven {
+            url 'https://dl.bintray.com/jmonkeyengine/org.jmonkeyengine'
+        }
     }
 }
 rootProject.name = "monopoly"
