--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,14 +7,14 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@drawable/iconalpha"
-        android:label="@string/app_name"
+        android:label="@string/app_name_uppercase"
         android:supportsRtl="true"
         android:theme="@style/Theme.Monopoly"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
+            android:label="@string/app_name_uppercase"
             android:theme="@style/Theme.Monopoly.NoActionBar"
             android:screenOrientation="landscape"
             >
