--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -3,9 +3,13 @@ name: Android CI
 
 on:
   push:
-    branches: [ main ]
+    branches: 
+      - main
+      - development
   pull_request:
-    branches: [ main ]
+    branches: 
+      - main
+      - development
 
 jobs:
   build:
