Fixed SonarCloud coverage exclusion

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,6 @@ sonarqube {
         property "sonar.host.url", "https://sonarcloud.io"
         property "sonar.java.coveragePlugin", "jacoco"
         property "sonar.coverage.jacoco.xmlReportPaths", "${project.projectDir}/build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml"
-        property "sonar.coverage.exclusions", "**/ui/* **/network/NSDServer*"
+        property "sonar.coverage.exclusions", "**/ui/*"
     }
 }
