Added Class ChanceCardCollection and first Testcases
ChanceCardCollection includes the method fillList, which creates
ChanceCard objects and adds them to list

first testcases, for testing the ClassesChanceCard and
ChanceCardCollection were implemented

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.4.1'
     implementation 'org.mockito:mockito-core:5.2.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     implementation 'org.jmonkeyengine:jme3-android-native:3.6.0-stable'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
