--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,32 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.monopoly">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/iconalpha"
-        android:label="@string/app_name_uppercase"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Monopoly"
+        android:theme="@style/Theme.TestMonopoly"
         tools:targetApi="31">
+
         <activity
-            android:name=".ui.MainActivity"
-            android:exported="true"
-            android:label="@string/app_name_uppercase"
-            android:theme="@style/Theme.Monopoly.NoActionBar"
-            android:screenOrientation="landscape"
-            >
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ClientActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ServerActivity"
+            android:exported="false"
+            android:label="@string/title_activity_server"
+            android:theme="@style/Theme.TestMonopoly.NoActionBar" />
     </application>
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+
 
 </manifest>
