--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -6,10 +6,12 @@ on:
     branches: 
       - main
       - development
+      - 'sprint-**'
   pull_request:
     branches: 
       - main
       - development
+      - 'sprint-**'
 
 jobs:
   build:
