--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,9 @@ android {
     }
 }
 
+
+
+
 task jacocoTestReport(type: JacocoReport, dependsOn: 'testDebugUnitTest') {
     reports {
         xml.enabled true
@@ -66,6 +69,9 @@ dependencies {
     implementation 'org.jmonkeyengine:jme3-android-native:3.6.0-stable'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    testImplementation 'org.mockito:mockito-core:4.2.0'
+
 }
 sonarqube {
     properties {
